<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.4.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.tschanz.nova</groupId>
	<artifactId>insbecdr</artifactId>
	<version>1.0.0</version>
	<name>inSBecDR</name>
	<description>SB DR Inspector</description>
	<packaging>jar</packaging>

	<properties>
		<java.version>11</java.version>
		<pflege.kontingent.sb.api.version>0.0.5</pflege.kontingent.sb.api.version>
		<zps.serialization.kryo.version>0.0.3</zps.serialization.kryo.version>
		<start-class>com.tschanz.nova.insbecdr.InsbecdrApplication</start-class>
	</properties>

	<dependencies>
		<dependency>
			<groupId>ch.voev.nova</groupId>
			<artifactId>zps-serialization-kryo-starter</artifactId>
			<version>${zps.serialization.kryo.version}</version>
			<!--<systemPath>${project.basedir}/lib/zps-serialization-kryo-starter.jar</systemPath>-->
		</dependency>

		<dependency>
			<groupId>ch.voev.nova.pflege.kontingent</groupId>
			<artifactId>novap-kontingent-sb-interface</artifactId>
			<version>${pflege.kontingent.sb.api.version}</version>
			<!--<systemPath>${pom.basedir}/lib/novap-kontingent-sb-interface.jar</systemPath>
			<scope>system</scope>-->
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>2.3.3</version>
            <scope>compile</scope>
        </dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.6.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>RELEASE</version>
			<scope>test</scope>
		</dependency>
    </dependencies>

	<distributionManagement>
		<repository>
			<id>mvn</id>
			<url>https://bin.sbb.ch/artifactory/zps.mvn/</url>
		</repository>
		<snapshotRepository>
			<id>mvn</id>
			<url>https://bin.sbb.ch/artifactory/zps.mvn/</url>
		</snapshotRepository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<fork>true</fork>
					<mainClass>${start-class}</mainClass>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
